Update spring boot version.